--- version 0.5 (xx/xx/2010) ---
Added an option (iConfig.ScriptOptions.copyExternalImages) to copy external images 
to the irrb destination texture directory.  Default is set to True.

--- version 0.4 (12/31/2009) ---
.irr Scene attribute "AmbientLight" is now written using Blender's World
ambient light value.

Added ability to export Fog (Blender Mist). Irrlicht default (video driver)
Fog settings are located in iConfig.py "SceneAttributes".
"Fog.Enabled" is controlled by enabling/disable Blenders World Mist.
"Start", "End", & "Density" are also overridden use Blenders World
Mist options. "Fog.Color" is set using Blender's World-Horizon color. 

Update to only export objects contained in active/visible layers.

Update to allow partial UserConfig definitions.

Added ability to write all game properties to scene node "userData".

Added hardware mapping hint ID properties ("HWMappingHint" & 
"HWMappingBufferType") for mesh objects.  The defaults are
"static" (EHM_STATIC) &  "vertexindex" (EBT_VERTEX_AND_INDEX).

Added exporting of physics attributes to mesh scene nodes. The attributes
are added to the "UserData" section of the node info. These attributes
may be read via the ISceneUserDataSerializer interface and feed into
the applications physics system (Bullet, Irrlicht (collision), PhysX, etc.).

Updated to allow custom materials (${materialtype}) to optionally specify
vertext type: ${materialtype}:{vertextype} where {vertextype} may be: 
'standard' (default), '2tcoords', or 'tangents'. Example: '$mymat:tangents',
would generate a material type named 'mymat' with EVT_TANGENTS vertices.

Updated to allow EVT_TANGENTS vertex type to be created for materials that
require it (normalmap_x, parallaxmap_x). Automatically detected & created.

Updated to allow a single mesh to contain more than 64k vertices (32 bit
indices). Applications will require the CIrrMeshWriter.cpp & 
CIrrMeshFileLoader.cpp patch.
